# pydircolors

./: .gitignore  .pylintrc  Makefile  README.md  make-release.py  pyproject.toml  requirements-dev.txt  setup.py
dircolors/: __init__.py  _compat.c  _defaults.py  _util.py  dircolors.py
dircolors/pyls/: __init__.py  __main__.py  pyls.py
pyls/: __main__.py
tests/: __init__.py  __main__.py  test_dircolors.py
