[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "dircolors"
author = "Allen Wild"
author-email = "allenwild93@gmail.com"
home-page = "https://github.com/aswild/pydircolors"
description-file = "README.md"
requires-python = ">=3.3"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
]

[tool.flit.scripts]
pyls = "dircolors.pyls.pyls:main"
